# Battery_Charge_Manager

./: .editorconfig  .gitignore  AUDIT_REPORT.md  CARGO_BASICS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.html  README.md  SCORE_100.md  build-deb.sh  install.sh  rustfmt.toml  uninstall.sh
.github/workflows/: ci.yml
docs/: README.html  README.md  REFERENCES.html  REFERENCES.md  generate_docs.py  style.css
install/: build-deb.sh  install.sh  uninstall.sh
resources/: battery-manager-restore.sh  battery-manager.desktop  battery-manager.service
src/: main.rs
src/core/: battery.rs  debug.rs  i18n.rs  mod.rs  peripheral.rs  power_supply.rs  traits.rs  vendor_detection.rs
src/ui/: app.rs  components.rs  info_tab.rs  mod.rs  peripherals_tab.rs  settings_tab.rs  theme.rs  ui_tab.rs
