[package]
name = "battery_manager"
version = "0.1.0"
edition = "2021"
authors = ["Manu"]
description = "A GTK4 battery manager application for Linux"
license = "MIT"

[dependencies]
gtk4 = "0.10"
glib = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
libc = "0.2"
